force-app/main/default/objects/Account/fields/Autre_categorie__c.field-meta.xml
<CustomField>
    <fullName>Autre_categorie__c</fullName>
    <label>Autre catégorie</label>
    <length>80</length>
    <type>Text</type>
</CustomField>