force-app/main/default/objects/Account/fields/Autre_grade__c.field-meta.xml
<CustomField>
    <fullName>Autre_grade__c</fullName>
    <label>Autre grade</label>
    <length>80</length>
    <type>Text</type>
</CustomField>