force-app/main/default/objects/Account/fields/Autre_service__c.field-meta.xml
<CustomField>
    <fullName>Autre_service__c</fullName>
    <label>Autre service</label>
    <length>80</length>
    <type>Text</type>
</CustomField>