force-app/main/default/objects/Account/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal de souscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Face à face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>