force-app/main/default/objects/Account/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Police nationale</fullName>
            </value>
            <value>
                <fullName>Police municipale</fullName>
            </value>
            <value>
                <fullName>Gendarmerie</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>ADS</fullName>
                <isActive>false</isActive>
                <label>ADS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>