force-app/main/default/objects/Account/fields/Cause_de_demission__c.field-meta.xml
<CustomField>
    <fullName>Cause_de_demission__c</fullName>
    <label>Cause de démission</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Situation_professionnelle__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>démissionnaire Orphéopolis</fullName>
            </value>
            <value>
                <fullName>sorti(e) du MI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>