force-app/main/default/objects/Account/fields/ChosenProduct__c.field-meta.xml
<CustomField>
    <fullName>ChosenProduct__c</fullName>
    <label>Produit Choisi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OffreSolo</fullName>
            </value>
            <value>
                <fullName>OffreCouple</fullName>
            </value>
            <value>
                <fullName>OffreFamille</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>