force-app/main/default/objects/Account/fields/Code_promo_ecole__c.field-meta.xml
<CustomField>
    <fullName>Code_promo_ecole__c</fullName>
    <label>Code promo école</label>
    <length>30</length>
    <type>Text</type>
</CustomField>