force-app/main/default/objects/Account/fields/Complement_adresse_1__c.field-meta.xml
<CustomField>
    <fullName>Complement_adresse_1__c</fullName>
    <label>Complement adresse 1</label>
    <type>TextArea</type>
</CustomField>