force-app/main/default/objects/Account/fields/Complement_adresse_2__c.field-meta.xml
<CustomField>
    <fullName>Complement_adresse_2__c</fullName>
    <label>Complement adresse 2</label>
    <type>TextArea</type>
</CustomField>