force-app/main/default/objects/Account/fields/Date_d_entree_dans_l_administration__c.field-meta.xml
<CustomField>
    <fullName>Date_d_entree_dans_l_administration__c</fullName>
    <label>Date d&apos;entrée dans l&apos;administration</label>
    <type>Date</type>
</CustomField>