force-app/main/default/objects/Account/fields/Date_de_demission__c.field-meta.xml
<CustomField>
    <fullName>Date_de_demission__c</fullName>
    <label>Date de démission</label>
    <type>Date</type>
</CustomField>