force-app/main/default/objects/Account/fields/EndtoEndId__c.field-meta.xml
<CustomField>
    <fullName>EndtoEndId__c</fullName>
    <description>Champ ID inchangé pour identifier l&apos;adhérent provenant d&apos;une source externe</description>
    <label>EndtoEndId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>