force-app/main/default/objects/Account/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fonction</label>
    <referenceTo>Fonction__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>