force-app/main/default/objects/Account/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADS - Cadet</fullName>
            </value>
            <value>
                <fullName>Gardien de la paix</fullName>
            </value>
            <value>
                <fullName>Élève Gardien de la Paix</fullName>
            </value>
            <value>
                <fullName>Brigadier</fullName>
            </value>
            <value>
                <fullName>Brigadier - chef</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Lieutenant</fullName>
            </value>
            <value>
                <fullName>Capitaine</fullName>
            </value>
            <value>
                <fullName>Commandant</fullName>
            </value>
            <value>
                <fullName>Commandant divisionnaire</fullName>
            </value>
            <value>
                <fullName>Commissaire</fullName>
            </value>
            <value>
                <fullName>Commissaire divisionnaire</fullName>
            </value>
            <value>
                <fullName>Commissaire général</fullName>
            </value>
            <value>
                <fullName>Personnel administratif, technique et scientifique</fullName>
            </value>
            <value>
                <fullName>Policier municipal</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>