force-app/main/default/objects/Account/fields/Matricule__c.field-meta.xml
<CustomField>
    <fullName>Matricule__c</fullName>
    <label>Matricule</label>
    <length>20</length>
    <type>Text</type>
</CustomField>