force-app/main/default/objects/Account/fields/N_d_adhesion__c.field-meta.xml
<CustomField>
    <fullName>N_d_adhesion__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>N° d&apos;adhésion</label>
    <type>AutoNumber</type>
</CustomField>