force-app/main/default/objects/Account/fields/Nb_enfants_charge__c.field-meta.xml
<CustomField>
    <fullName>Nb_enfants_charge__c</fullName>
    <label>Nb enfants à charge</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>