force-app/main/default/objects/Account/fields/Niveau_de_prospection__c.field-meta.xml
<CustomField>
    <fullName>Niveau_de_prospection__c</fullName>
    <label>Niveau de prospection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Froid</fullName>
            </value>
            <value>
                <fullName>Tiede</fullName>
                <label>Tiède</label>
            </value>
            <value>
                <fullName>Chaud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>