force-app/main/default/objects/Account/fields/Section_de_vote__c.field-meta.xml
<CustomField>
    <fullName>Section_de_vote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section de vote</label>
    <referenceTo>Section_de_vote__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>