force-app/main/default/objects/Account/fields/Section_locale__c.field-meta.xml
<CustomField>
    <fullName>Section_locale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section locale</label>
    <referenceTo>Section_locale__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>