force-app/main/default/objects/Account/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCSP</fullName>
            </value>
            <value>
                <fullName>Préfecture de police</fullName>
            </value>
            <value>
                <fullName>DCPAF</fullName>
            </value>
            <value>
                <fullName>DCCRS</fullName>
            </value>
            <value>
                <fullName>DCPJ</fullName>
            </value>
            <value>
                <fullName>DRCPN</fullName>
            </value>
            <value>
                <fullName>DCRFPN</fullName>
            </value>
            <value>
                <fullName>Police Municipale</fullName>
            </value>
            <value>
                <fullName>Préfectures</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>