force-app/main/default/objects/Account/fields/Site_de_travail__c.field-meta.xml
<CustomField>
    <fullName>Site_de_travail__c</fullName>
    <label>Site de travail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>