force-app/main/default/objects/Account/fields/Situation_familiale__c.field-meta.xml
<CustomField>
    <fullName>Situation_familiale__c</fullName>
    <label>Situation familiale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Célibataire</fullName>
            </value>
            <value>
                <fullName>Marié</fullName>
            </value>
            <value>
                <fullName>Concubinage</fullName>
            </value>
            <value>
                <fullName>Pacsé</fullName>
            </value>
            <value>
                <fullName>Divorcé</fullName>
            </value>
            <value>
                <fullName>Veuf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>