force-app/main/default/objects/Account/fields/Situation_professionnelle__c.field-meta.xml
<CustomField>
    <fullName>Situation_professionnelle__c</fullName>
    <label>Situation professionnelle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En activité</fullName>
                <default>true</default>
                <label>En activité</label>
            </value>
            <value>
                <fullName>Démissionnaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>