force-app/main/default/objects/Account/fields/SocialSecurityNumber__c.field-meta.xml
<CustomField>
    <fullName>SocialSecurityNumber__c</fullName>
    <label>SocialSecurityNumber</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>