force-app/main/default/objects/Account/fields/Source_adhesion__c.field-meta.xml
<CustomField>
    <fullName>Source_adhesion__c</fullName>
    <label>Personne source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>