force-app/main/default/objects/Account/fields/Type_de_source__c.field-meta.xml
<CustomField>
    <fullName>Type_de_source__c</fullName>
    <label>Type de source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Internet</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Chargé de mission</fullName>
            </value>
            <value>
                <fullName>Correspondant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>