force-app/main/default/objects/Account/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement représentant des adhérents potentiels</description>
    <label>Prospect</label>
</RecordType>